<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222121"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MainActivity">

...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#666" />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="309dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
...
