...
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="#222121">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/user_icon"
            app:layout_constraintTop_toBottomOf="@id/side_panel_button"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F5E6D3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/jomolhari"/>
...
