<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#3E3D3D"
        android:id="@+id/card_user"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user"
            android:visibility="visible"
            app:tint="#FFF" />

        <TextView
            android:id="@+id/item_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>